# loadnothing

./: .gitignore  Makefile  README.md  bochsrc  boot.asm  linker.ld  nothing.img
stage1/: Makefile  boot.asm
stage2/: Cargo.toml  x86-loadnothing.json
stage2/.cargo/: config.toml
stage2/src/: main.rs  vga.rs
