[package]
name = "stage2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
volatile = "0.4.5"
spin = "0.9.4"
